# rimi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  flake.nix
.github/workflows/: flake-lock.yml  publish-changelog.yml  release.yml
.woodpecker/: update-flake.yaml
librimi/: Cargo.toml
librimi/src/: backend.rs  image.rs  lib.rs
librimi/src/backend/: progress.rs
librimi/src/image/: color.rs  formats.rs  info.rs  manipulator.rs
rimcli/: Cargo.toml
rimcli/src/app/command/: info.rs  recolor.rs
rimcli/src/app/run/: single.rs
rimi-cli/: Cargo.toml
rimi-cli/src/app/: run.rs
rimi-cli/src/app/command/: resize.rs  transparent.rs
rimi-cli/src/app/run/: batch.rs
rimi-gui/: Cargo.toml
rimlib/: Cargo.toml
rimlib/src/: image.rs  lib.rs  tests.rs
rimlib/src/backend/: paths.rs
rimlib/src/image/: color.rs  manipulator.rs  pixels.rs  randomize.rs  size.rs  transparency.rs
rimui/: Cargo.toml
rimui/src/: gallery.rs  imagedef.rs  main.rs
src/: app.rs  backend.rs  batch.rs  color.rs  image.rs  info.rs  main.rs  open.rs  utils.rs
src/app/: command.rs  display.rs  run.rs  state.rs
src/app/command/: batch.rs  completions.rs  convert.rs  info.rs  recolor.rs  resize.rs  transparent.rs
src/app/run/: batch.rs  single.rs
src/backend/: error.rs  paths.rs  progress.rs  queue.rs
src/image/: color.rs  info.rs  manipulator.rs
src/utils/: batch.rs  color.rs  image.rs  info.rs
