[package]
name = "rimi"
version = "0.1.1"
edition = "2021"
authors = ["Daru-san"]
repository = "https://github.com/Daru-san/rimi"


[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11.0"
image = "0.25.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
