[package]
name = "rimi"
version = "0.1.4"
edition = "2021"
authors = ["Daru-san"]
repository = "https://github.com/Daru-san/rimi"


[dependencies]
anyhow = "1.0.94"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.5.38"
clap_complete_nushell = "4.5.4"
dialoguer = "0.11.0"
image = { version = "0.25.5", features = ["avif"] }
indicatif = "0.17.9"
thiserror = "2.0.6"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
