[package]
name = "rimui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image","tokio","advanced"] }
iced_widget = { version = "0.13.4", features = ["image"] }
image = "0.25.6"
rayon = "1.10.0"
rimlib = { version = "0.1.0", path = "../rimlib" }
rfd = "0.15.3"
tokio = { version = "1.44.2", features = ["full"] }
